[package]
name = "raex"
version = "0.1.0"
authors = ["Devdutt Shenoi <devdutt@outlook.in>"]
edition = "2018"

[workspace]
members = [
	"components/raft",
	"components/dstore",
	"components/rtrcrs",
	]

[dependencies]
async-trait = "0.1"
config = "0.11"
serde = { version = "^1.0.8", features = ["derive"] }
dstore = { path = "components/dstore" } 
raft = { path = "components/raft" }
rtrcrs = { path = "components/rtrcrs" }
tokio = { version = "1.5", features = ["full"] }
bytes = "1"
lazy_static = "*"
tonic = "0.3"
prost = "0.6"

[build-dependencies]
tonic-build = "0.3.0"
